--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,4 @@
+# $RNFirebaseAsStaticFramework = true
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
@@ -6,7 +7,8 @@ install! 'cocoapods', :deterministic_uuids => false
 
 target 'Nov11' do
   config = use_native_modules!
-
+  # use_modular_headers!
+  # use_frameworks! :linkage => :static
   # Flags change depending on the env values.
   flags = get_default_flags()
 
